select from picture

--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -11,15 +11,15 @@
 
   <body>
       
-    <canvas id="canvas" width=500 height=500></canvas>
-     
+    <!-- <canvas id="canvas" width=500 height=500   style="background: url('../static/Images/sky.jpg')"></canvas> -->
+    <canvas id="canvas" width=500 height=500  ></canvas>
 
     <script src="../static/java script/main.js"></script>
    
         
     
       
- 
+    
   </body>
 
 </html>
