adding basic functions and starting app

--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -14,6 +14,31 @@
     <!-- <canvas id="canvas" width=500 height=500   style="background: url('../static/Images/sky.jpg')"></canvas> -->
     <canvas id="canvas" width=500 height=500  ></canvas>
 
+
+
+
+    <div class="out">
+      <form action="/imageMixing">
+        <button type="submit" value="Start" name="Begin"></button>
+      </form>
+      <div class="borderI">
+        <div class="cont-col">
+                <img src="static\img\image1.png" class="img img1">
+                <img src="static\img\magnitude1.png" class="img img1">
+                <img src="static\img\phase1.png" class="img img1">
+                <img src="static\img\image2.png" class="img img1">
+                <img src="static\img\magnitude2.png" class="img img1">
+                <img src="static\img\phase2.png" class="img img1">
+                <img src="static\img\output.png" class="img img1">
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
     <script src="../static/java script/main.js"></script>
    
         
