--- a/static/Style Sheet/style.css
+++ b/static/Style Sheet/style.css
@@ -1,6 +1,166 @@
-body{ background-color: ivory; }
+/* body{ background-color: ivory; } */
 #canvas{border:1px solid rgb(10, 0, 0);}
-.image{
+/* .image{
     width: 500px;
     height: 500px;
+} */
+
+
+.title{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
 }
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 4px;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery__item--0 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start:1;
+    grid-row-end: 1;
+    font-size: 40px;
+
+}
+.gallery__item--0_0 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start:1;
+    grid-row-end: 1;
+    font-size: 30px;
+
+}
+.gallery__item--0_1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start:1;
+    grid-row-end: 1;
+
+}
+
+.gallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 5;
+}
+
+.gallery__item--2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 5;
+}
+
+.gallery__item--3_0 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 6;
+    font-size: 40px;
+
+}
+.gallery__item--3 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 2;
+    grid-row-end: 2;
+
+}
+
+
+.gallery__item--8 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start:5;
+    grid-row-end: 8;
+    font-size: 40px;
+
+}
+.gallery__item--8_0 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start:5;
+    grid-row-end: 5;
+    font-size: 30px;
+
+}
+.gallery__item--4 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 6;
+    grid-row-end: 11;
+}
+
+.gallery__item--7 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start:6;
+    grid-row-end: 12;
+}
+
+.gallery__item--5 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 6;
+    grid-row-end: 9;
+}
+.gallery__item--6_0 {
+    grid-column-start: 5;
+    grid-column-end: 8;
+    grid-row-start: 4;
+    grid-row-end: 4;
+    font-size: 40px;
+}
+
+.gallery__item--6 {
+    grid-column-start: 5;
+    grid-column-end: 8;
+    grid-row-start: 5;
+    grid-row-end: 11;
+}
+
+
+ 
+
+
+
+
+  select {
+    margin-top: 10px;
+    margin-bottom: 1em;
+    padding: .25em;
+    border: 0;
+    border-bottom: 2px solid currentcolor; 
+    font-weight: bold;
+    letter-spacing: .15em;
+    border-radius: 0;
+    font-size: 20px;
+
+  }
+
+
+  .upload{
+    text-align:center;
+    padding:3%;
+    /* border:thin solid black; */
+  }
+
+  .upload input{
+    display: none;
+  }
+  .upload label{
+    cursor:pointer;
+  }
+  #imageName{
+    color:green;
+  }
