--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -38,10 +38,11 @@
           </select>
         </figure>
           <figure class="gallery__item gallery__item--1">
-              <img src="static\Images\image2.png" alt="Gallery image 1" class="gallery__img">
+               <canvas id="canvas" width=250 height=200   style="background: url('../static/Images/image2.png')"></canvas>
+              <!-- <img src="static\Images\image2.png" alt="Gallery image 1" class="gallery__img"> -->
           </figure>
           <figure class="gallery__item gallery__item--2">
-              <img src="static\Images\image2.png" alt="Gallery image 2" class="gallery__img">
+              <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img">
           </figure>
 
 
@@ -72,16 +73,16 @@
             </select>
           </figure>
           <figure class="gallery__item gallery__item--4">
-              <img src="static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
+              <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--7">
-            <img src="static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
+            <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
         </figure>
         <figure class="gallery__item gallery__item--6_0">
           <div>Output Image</div>
         </figure>
           <figure class="gallery__item gallery__item--6">
-              <img src="static\Images\image2.png" alt="Gallery image 6" class="gallery__img">
+              <img src="../static\Images\image2.png" alt="Gallery image 6" class="gallery__img">
           </figure>
       </div>
   </div>
