--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -38,11 +38,12 @@
           </select>
         </figure>
           <figure class="gallery__item gallery__item--1">
-               <canvas id="canvas" width=250 height=200   style="background: url('../static/Images/image2.png')"></canvas>
-              <!-- <img src="static\Images\image2.png" alt="Gallery image 1" class="gallery__img"> -->
+            
+              <img src="../static\Images\image2.png" alt="Gallery image 1" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--2">
-              <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img">
+            <canvas id="canvas" width=250 height=200   style="background: url('../static/Images/image2.png')"></canvas>
+              <!-- <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img"> -->
           </figure>
 
 
@@ -76,7 +77,8 @@
               <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--7">
-            <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
+            <canvas id="canvas1" width=250 height=200   style="background: url('../static/Images/image2.png')"></canvas>
+            <!-- <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img"> -->
         </figure>
         <figure class="gallery__item gallery__item--6_0">
           <div>Output Image</div>
@@ -125,6 +127,6 @@
     
   </body> -->
   <script src="../static/java script/main.js"></script>
-
+  <!-- <script src="../static/java script/second.js"></script> -->
 </body>
 </html>
