--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -127,6 +127,7 @@
     
   </body> -->
   <script src="../static/java script/main.js"></script>
-  <!-- <script src="../static/java script/second.js"></script> -->
+  
+  <script src="../static/java script/second.js"></script>
 </body>
 </html>
