--- a/static/Style Sheet/style.css
+++ b/static/Style Sheet/style.css
@@ -40,10 +40,11 @@
 
 }
 .gallery__item--0_1 {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start:1;
-    grid-row-end: 1;
+  grid-column-start:2;
+  grid-column-end: 3;
+  grid-row-start:1;
+  grid-row-end: 1;
+  font-size: 37px;
 
 }
 
@@ -84,6 +85,14 @@
     grid-row-start:5;
     grid-row-end: 8;
     font-size: 40px;
+
+}
+.gallery__item--8_1 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start:5;
+  grid-row-end: 8;
+  font-size: 37px;
 
 }
 .gallery__item--8_0 {
@@ -163,4 +172,38 @@
   }
   #imageName{
     color:green;
+  }
+
+
+
+  .custom-file-input {
+    color: transparent;
+  }
+  .custom-file-input::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+  .custom-file-input::before {
+    content: 'Upload Images';
+    color: black;
+    display: inline-block;
+    background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+  }
+  .custom-file-input:hover::before {
+    border-color: black;
+  }
+  .custom-file-input:active {
+    outline: 0;
+  }
+  .custom-file-input:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
   }
