--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -20,16 +20,7 @@
           <div>Image 1</div>
         </figure>
           <figure class="gallery__item gallery__item--0_1">
-            <!-- <div class="upload">
-              <label for="inputTag">
-                Upload an Image <br/>
-                <i class="fa fa-2x fa-camera"></i>
-
-                <input id="inputTag" type="file"/>
-                <br/>
-                <span id="imageName"></span>
-              </label>
-            </div> -->
+            <input type="file" class="custom-file-input">
         </figure>
         <figure class="gallery__item gallery__item--0_0">
           <select id="selectbox" data-selected="">
@@ -42,7 +33,7 @@
               <img src="../static\Images\image2.png" alt="Gallery image 1" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--2">
-            <canvas id="canvas" width=250 height=200   style="background: url('../static/Images/image2.png')"></canvas>
+            <canvas id="canvas" width=250 height=200   ></canvas>
               <!-- <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img"> -->
           </figure>
 
@@ -63,7 +54,9 @@
 
 
 
-
+            <figure class="gallery__item gallery__item--8_1">
+              <input type="file" class="custom-file-input">
+            </figure>
           <figure class="gallery__item gallery__item--8">
             <div>Image 2</div>
           </figure>
@@ -77,7 +70,7 @@
               <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--7">
-            <canvas id="canvas1" width=250 height=200   style="background: url('../static/Images/image2.png')"></canvas>
+            <canvas id="canvas1" width=250 height=200  ></canvas>
             <!-- <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img"> -->
         </figure>
         <figure class="gallery__item gallery__item--6_0">
