--- a/static/Style Sheet/style.css
+++ b/static/Style Sheet/style.css
@@ -1,11 +1,13 @@
 /* body{ background-color: ivory; } */
-#canvas{border:1px solid rgb(10, 0, 0);}
+#canvas{border:1px solid rgb(10, 0, 0);
+}
 /* .image{
     width: 500px;
     height: 500px;
 } */
 
-
+#canvas1{border:1px solid rgb(10, 0, 0);
+}
 .title{
     text-align: center;
     font-size: 40px;
@@ -19,9 +21,10 @@
 }
 
 .gallery__img {
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     object-fit: cover;
+    border:1px solid rgb(10, 0, 0);
 }
 .gallery__item--0 {
     grid-column-start: 1;
@@ -63,18 +66,18 @@
 }
 
 .gallery__item--3_0 {
-    grid-column-start: 5;
+    grid-column-start: 6;
     grid-column-end: 9;
-    grid-row-start: 1;
-    grid-row-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 2;
     font-size: 40px;
 
 }
 .gallery__item--3 {
-    grid-column-start: 5;
+    grid-column-start: 6;
     grid-column-end: 9;
-    grid-row-start: 2;
-    grid-row-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 3;
 
 }
 
@@ -107,7 +110,7 @@
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 6;
-    grid-row-end: 11;
+    grid-row-end: 9;
 }
 
 .gallery__item--7 {
@@ -124,22 +127,25 @@
     grid-row-end: 9;
 }
 .gallery__item--6_0 {
-    grid-column-start: 5;
-    grid-column-end: 8;
-    grid-row-start: 4;
-    grid-row-end: 4;
+  grid-column-start: 6;
+  grid-column-end: 9;
+  grid-row-start:5;
+  grid-row-end: 5;
     font-size: 40px;
 }
 
-.gallery__item--6 {
-    grid-column-start: 5;
-    grid-column-end: 8;
-    grid-row-start: 5;
-    grid-row-end: 11;
+.gallery__item--6{
+    grid-column-start: 6;
+    grid-column-end: 9;
+    grid-row-start: 6;
+    grid-row-end: 9;
 }
 
-
- 
+/* grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 6;
+grid-row-end: 9;
+  */
 
 
 
