--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -7,13 +7,12 @@
     <title>Image Mixer</title>
     <link rel="stylesheet" href="../static/Style Sheet/style.css" />
     <script src="../static/java script/jquery-3.6.2.min.js"></script>
-    <script src="https://use.fontawesome.com/3a2eaf6206.js"></script>
+    <!-- <script src="https://use.fontawesome.com/3a2eaf6206.js"></script> -->
 
 
   </head>
 
   <body>
-    <!-- <div class="title" >Image Mixer</div> -->
     <div class="container">
       <div class="gallery">
         <figure class="gallery__item gallery__item--0">
@@ -33,7 +32,7 @@
               <img src="../static\Images\image2.png" alt="Gallery image 1" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--2">
-            <canvas id="canvas" width=250 height=200   ></canvas>
+            <canvas id="canvas" width=440 height=230   ></canvas>
               <!-- <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img"> -->
           </figure>
 
@@ -70,7 +69,7 @@
               <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
           </figure>
           <figure class="gallery__item gallery__item--7">
-            <canvas id="canvas1" width=250 height=200  ></canvas>
+            <canvas id="canvas1" width=440 height=230  ></canvas>
             <!-- <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img"> -->
         </figure>
         <figure class="gallery__item gallery__item--6_0">
@@ -82,45 +81,8 @@
       </div>
   </div>
 
-
-
-    <!-- <canvas id="canvas" width=500 height=500   style="background: url('../static/Images/sky.jpg')"></canvas> -->
-    <!-- <canvas id="canvas" width=500 height=500  ></canvas> -->
-
-
-
-<!-- <div class="'sec">
-      <form action="/imageMixing">
-        <button type="submit" value="Start" name="Begin"></button>
-      </form>
-      <div class="left_sec">
-
-                <img src="static\Images\image1.png" class="img img1">
-           
-                <img src="static\Images\magnitude1.png" class="img img1">
-                <img src="static\Images\phase1.png" class="img img1">
-                <img src="static\Images\image2.png" class="img img1">
-                <img src="static\Images\magnitude2.png" class="img img1">
-                <img src="static\Images\phase2.png" class="img img1">
-                <img src="static\Images\output.png" class="img img1">
-        </div>
-   
-
-        <div class="righ_sec">
-          <div>
-          <img src="static\Images\phase1.png" class="img img1">
-        </div>
-
-        </div>
-      </div>
-      
-    
-  <script src="../static/java script/main.js"></script>
-
-    
-  </body> -->
-  <script src="../static/java script/main.js"></script>
-  
-  <script src="../static/java script/second.js"></script>
 </body>
+<script src="../static/java script/main.js"></script>
+  
+<script src="../static/java script/second.js"></script>
 </html>
