--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -19,7 +19,7 @@
           <div>Image 1</div>
         </figure>
           <figure class="gallery__item gallery__item--0_1">
-            <form method="POST" action="/" enctype="multipart/form-data">
+            <form method="post" action="/" enctype="multipart/form-data">
               <dl>
                   <p>
                     <input type="file" name="files[]" multiple="true" class="custom-file-input" autocomplete="off" required>                
