--- a/static/Style Sheet/style.css
+++ b/static/Style Sheet/style.css
@@ -19,6 +19,20 @@
     grid-template-rows: repeat(8, 5vw);
     grid-gap: 4px;
 }
+#gallery__img{
+   height: 100%;
+    object-fit: cover;
+    border:1px solid rgb(10, 0, 0);
+}
+.result{
+  filter: grayscale(100%);
+  width: 100%;
+  height: 100%;
+}
+.result3{
+  width: 50%;
+  height: 30%;
+}
 
 .gallery__img {
     /* width: 100%; */
