--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -19,12 +19,16 @@
           <div>Image 1</div>
         </figure>
           <figure class="gallery__item gallery__item--0_1">
-            <form method="post" action="/" enctype="multipart/form-data">
-                    <input type="file" name="'img1"  class="custom-file-input" onchange="this.parentElement.submit()">                
-              <!-- <p>
-                <input type="submit" value="Upload" class="btn btn-info">
-              </p> -->
-          </form>
+         
+          <div class = "form-group">
+            <input type="file" id="file-input1" class="custom-file-input"  required accept="image/">
+           
+        </div>
+        <!-- <div class = "box-2">
+          <div class= "result"> </div>
+          <div class= "result2"> </div>
+           <img src="  " alt="User Image" id="User-img" class=" result3 hide" style="display: none;"> -->
+      <!-- </div>  -->
         </figure>
         <figure class="gallery__item gallery__item--0_0">
           <select id="selectbox" data-selected="">
@@ -33,8 +37,10 @@
           </select>
         </figure>
           <figure class="gallery__item gallery__item--1">
-            
-              <img  id="btn" src="../static\Images\image1.png" alt="Gallery image 1" class="gallery__img">
+
+            <div class= "result" id="gallery__img"> 
+            <img src="  " alt="User Image" id="User-img" class=" result3 hide" style="display: none;"></div>
+           
           </figure>
           <figure class="gallery__item gallery__item--2">
             <canvas id="canvas" width=440 height=230   ></canvas>
@@ -59,10 +65,7 @@
 
 
             <figure class="gallery__item gallery__item--8_1">
-              <form method="post" action="/" enctype="multipart/form-data" >
-                       <!-- <input type="file" name="files[]" multiple="true" class="custom-file-input" autocomplete="off" required  onchange="readURL2(this);"> -->
-                       <input type="file" name="'img2" class="custom-file-input" onchange="this.parentElement.submit()">
-              </form>
+              <input type="file" id="file-input2" class="custom-file-input"  required accept="image/"> 
             </figure>
           <figure class="gallery__item gallery__item--8">
             <div>Image 2</div>
@@ -74,7 +77,7 @@
             </select>
           </figure>
           <figure class="gallery__item gallery__item--4">
-              <img id="btn2" src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img">
+            <div class= "result2" id="gallery__img"> </div>
           </figure>
           <figure class="gallery__item gallery__item--7">
             <canvas id="canvas1" width=440 height=230  ></canvas>
@@ -92,5 +95,6 @@
 </body>
 <script src="../static/java script/main.js"></script>
   
+<script src="../static/java script/upload.js"></script>
 <script src="../static/java script/second.js"></script>
 </html>
