--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -54,17 +54,9 @@
             <div>Image Mixer</div>
           </figure>
           <figure class="gallery__item gallery__item--3">
-            <form action="/" method="post" enctype="multipart/form-data">
-              <select id="selectbox" name="selectbox"  onclick="selectOption()">
-                <option value="1" selected>Phase 1 & Magnitude 2</option>
-                <option value="2">Phase 2 & Magnitude 1</option>
-              </select>
-              <script>
-                selectOption()
-                function selectOption(){
-                    let Option = document.getElementById('selectbox').value
-                }
-                </script>
+            <form method="post" action="/" enctype="multipart/form-data">
+              <input type="submit" value="Phase1 & Magnitude2" name="1"/>
+              <input type="submit" value="Phase2 & Magnitude1" name="2" />
             </form>
           </figure>
 
