--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -43,7 +43,7 @@
 
           </figure>
           <figure class="gallery__item gallery__item--2">
-            <canvas id="canvas" width=440 height=230   ></canvas>
+            <canvas id="canvas" width=440 height=230   style="background: url('../static/Images/image1_440x230.png') "  ></canvas>
               <!-- <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img"> -->
           </figure>
 
@@ -85,7 +85,7 @@
 
           </figure>
           <figure class="gallery__item gallery__item--7">
-            <canvas id="canvas1" width=440 height=230  ></canvas>
+            <canvas id="canvas1" width=440 height=230  style="background: url('../static/Images/image2_440x230.png') "></canvas>
             <!-- <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img"> -->
         </figure>
         <figure class="gallery__item gallery__item--6_0">
