--- a/static/Style Sheet/style.css
+++ b/static/Style Sheet/style.css
@@ -19,23 +19,11 @@
     grid-template-rows: repeat(8, 5vw);
     grid-gap: 4px;
 }
-#gallery__img{
-   height: 100%;
-    object-fit: cover;
-    border:1px solid rgb(10, 0, 0);
-}
-.result{
-  filter: grayscale(100%);
-  width: 100%;
-  height: 100%;
-}
-.result3{
-  width: 50%;
-  height: 30%;
-}
+
+
 
 .gallery__img {
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border:1px solid rgb(10, 0, 0);
@@ -56,6 +44,33 @@
     font-size: 30px;
 
 }
+.gallery__item--0_2 {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start:1;
+  grid-row-end: 1;
+  font-size: 30px;
+  margin-left: 70px;
+
+}
+.gallery__item--0_9 {
+  grid-column-start:4;
+  grid-column-end: 5;
+  grid-row-start:5;
+  grid-row-end: 5;
+  font-size: 30px;
+  margin-left: 70px;
+}
+
+.gallery__item--8_0 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start:5;
+  grid-row-end: 5;
+  font-size: 30px;
+
+}
+
 .gallery__item--0_1 {
   grid-column-start:2;
   grid-column-end: 3;
@@ -113,14 +128,7 @@
   z-index: 999;
 
 }
-.gallery__item--8_0 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start:5;
-    grid-row-end: 5;
-    font-size: 30px;
 
-}
 .gallery__item--4 {
     grid-column-start: 1;
     grid-column-end: 3;
@@ -156,13 +164,6 @@
     grid-row-end: 9;
 }
 
-/* grid-column-start: 1;
-grid-column-end: 3;
-grid-row-start: 6;
-grid-row-end: 9;
-  */
-
-
 
 
   select {
@@ -178,22 +179,7 @@ grid-row-end: 9;
 
   }
 
-/* 
-  .upload{
-    text-align:center;
-    padding:3%;
-    border:thin solid black;
-  }
 
-  .upload input{
-    display: none;
-  }
-  .upload label{
-    cursor:pointer;
-  }
-  #imageName{
-    color:green;
-  } */
 
 
 
@@ -229,4 +215,35 @@ grid-row-end: 9;
   }
   .custom-file-input:active::before {
     background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
+  }
+
+
+
+
+  .rounded-button {
+    
+    width: 50px;
+    height: 50px;
+    background: #a42424;
+    color: #ffffff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+    text-decoration: none;
+    /* transition: background 0.2s; */
+  }
+  
+  .rounded-button:hover {
+    background: #a53939;
+  }
+
+  
+  .buttons{
+    display: flex;
+   flex-direction: row;
+   gap:20px;
+
   }
