--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -31,10 +31,9 @@
 
         </figure>
         <figure class="gallery__item gallery__item--0_0">
-          <select id="selectbox" data-selected="">
-            <option value="1">Phase</option>
-            <option value="2">Magnitude</option>
-          </select>
+              <button class="option" onclick="mag1()">Magnitude</button>
+          <button class="option" onclick="phase1()">phase</button>
+
         </figure>
         <figure class="gallery__item gallery__item--0_2">
           <div class="buttons">
@@ -90,10 +89,8 @@
             <div>Image 2</div>
           </figure>
           <figure class="gallery__item gallery__item--8_0">
-            <select id="selectbox" data-selected="">
-              <option value="1">Phase</option>
-              <option value="2">Magnitude</option>
-            </select>
+        <button class="option"onclick="mag2()">Magnitude</button>
+            <button class="option" onclick="phase2()">phase</button>
           </figure>
           <figure class="gallery__item gallery__item--0_9">
             <div class="buttons">
