--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -31,8 +31,8 @@
 
         </figure>
         <figure class="gallery__item gallery__item--0_0">
-              <button class="option" onclick="mag1()">Magnitude</button>
-          <button class="option" onclick="phase1()">phase</button>
+                <button class="option" value="2" onclick="mag1(this.value)">Magnitude</button>
+          <button class="option" value="1" onclick="phase1(this.value)">phase</button>
 
         </figure>
         <figure class="gallery__item gallery__item--0_2">
@@ -89,8 +89,8 @@
             <div>Image 2</div>
           </figure>
           <figure class="gallery__item gallery__item--8_0">
-        <button class="option"onclick="mag2()">Magnitude</button>
-            <button class="option" onclick="phase2()">phase</button>
+      <button class="option" value="2" onclick="mag2(this.value)">Magnitude</button>
+            <button class="option" value="1" onclick="phase2(this.value)">phase</button>
           </figure>
           <figure class="gallery__item gallery__item--0_9">
             <div class="buttons">
