--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -31,9 +31,11 @@
 
         </figure>
         <figure class="gallery__item gallery__item--0_0">
-                <button class="option" value="2" onclick="mag1(this.value)">Magnitude</button>
-          <button class="option" value="1" onclick="phase1(this.value)">phase</button>
+          <div class="buttons_1"> 
 
+            <button class="option" value="2" onclick="mag1(this.value)">Magnitude</button>
+            <button class="option" value="1" onclick="phase1(this.value)">phase</button>
+        </div>
         </figure>
         <figure class="gallery__item gallery__item--0_2">
           <div class="buttons">
@@ -89,8 +91,13 @@
             <div>Image 2</div>
           </figure>
           <figure class="gallery__item gallery__item--8_0">
-      <button class="option" value="2" onclick="mag2(this.value)">Magnitude</button>
+         
+            <div class="buttons_1"> 
+              <button class="option" value="2" onclick="mag2(this.value)">Magnitude</button>
             <button class="option" value="1" onclick="phase2(this.value)">phase</button>
+
+
+         </div>
           </figure>
           <figure class="gallery__item gallery__item--0_9">
             <div class="buttons">
