--- a/static/Style Sheet/style.css
+++ b/static/Style Sheet/style.css
@@ -1,4 +1,5 @@
-/* body{ background-color: ivory; } */
+/* body{ background-color: #E7E6E1; } */
+
 #canvas{border:1px solid rgb(10, 0, 0);
 }
 /* .image{
@@ -45,21 +46,25 @@
 
 }
 .gallery__item--0_2 {
-  grid-column-start: 4;
+  grid-column-start: 5;
   grid-column-end: 5;
-  grid-row-start:1;
-  grid-row-end: 1;
+  grid-row-start:2;
+  grid-row-end: 3;
   font-size: 30px;
-  margin-left: 70px;
+  margin-left: 150px;
+  margin-top: 60px;
+
 
 }
 .gallery__item--0_9 {
-  grid-column-start:4;
+  grid-column-start:5;
   grid-column-end: 5;
-  grid-row-start:5;
-  grid-row-end: 5;
+  grid-row-start:6;
+  grid-row-end: 6;
   font-size: 30px;
-  margin-left: 70px;
+  margin-left: 150px;
+  margin-top: 60px;
+
 }
 
 .gallery__item--8_0 {
@@ -162,6 +167,8 @@
     grid-column-end: 9;
     grid-row-start: 6;
     grid-row-end: 9;
+    margin-right: 0px;
+
 }
 
 
@@ -193,21 +200,24 @@
   }
   .custom-file-input::before {
     content: 'Choose Files';
-    color: black;
+    color: #eee;
     display: inline-block;
-    background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
-    border: 1px solid #999;
+    background-color: #a42424;
+    border: none;
     border-radius: 3px;
-    padding: 5px 8px;
+    padding: 10px 25px;
+
     outline: none;
     white-space: nowrap;
     -webkit-user-select: none;
     cursor: pointer;
-    text-shadow: 1px 1px #fff;
-    font-weight: 700;
-    font-size: 10pt;
+  
+    font-size: 15px;
   }
-  .custom-file-input:hover::before {
+
+
+
+  /* .custom-file-input:hover::before {
     border-color: black;
   }
   .custom-file-input:active {
@@ -215,7 +225,7 @@
   }
   .custom-file-input:active::before {
     background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
-  }
+  } */
 
 
 
@@ -242,8 +252,61 @@
 
   
   .buttons{
-    display: flex;
-   flex-direction: row;
+  display: flex;
+   flex-direction: column;
    gap:20px;
 
   }
+
+
+
+  input[type="submit"] {
+    background-color: #a42424;
+    color: #eee;
+    padding: 15px 25px;
+    border: none;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    font-size: 15px;
+    margin-top: 20px;
+    cursor: pointer;
+
+
+
+  }
+  
+  input[type="submit"]:hover {
+     background-color: #a53939;
+  }
+
+
+.option{
+  background-color: #a42424;
+  border: none;
+  border-radius: 3px;
+  color: #eee;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+
+}
+
+.option:hover {
+  background-color: #a53939;
+}
+
+
+.buttons_1{
+  display: flex;
+  flex-direction: row;
+  gap:20px;
+  margin-top: 10px;
+
+
+}
