--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -59,7 +59,7 @@
           </figure>
           <figure class="gallery__item gallery__item--2">
 
-            <canvas id="canvas" width=400 height=210   style="background: url('../static/Images/image1_440x230.png') "  ></canvas>
+            <canvas id="canvas" width=400 height=210  ></canvas>
               <!-- <img src="../static\Images\image2.png" alt="Gallery image 2" class="gallery__img"> -->
           </figure>
 
@@ -71,8 +71,17 @@
           </figure>
           <figure class="gallery__item gallery__item--3">
             <form method="post" action="/" enctype="multipart/form-data">
+              <div class="buttons_1">
               <input type="submit" value="Phase1 & Magnitude2" name="1"/>
               <input type="submit" value="Phase2 & Magnitude1" name="2" />
+            </div>
+            <div class="buttons_2">
+
+              <input style="padding:11px 85px; font-size: 20px;" type="submit" value="Cut" name="3" />
+              <input style="padding:11px 70px; font-size: 20px; " type="submit" value="Select" name="3" />
+            </div>
+
+
             </form>
           </figure>
 
@@ -118,7 +127,7 @@
           </figure>
           <figure class="gallery__item gallery__item--7">
 
-            <canvas id="canvas1" width=400 height=210  style="background: url('../static/Images/image2_440x230.png') "></canvas>
+            <canvas id="canvas1" width=400 height=210 ></canvas>
             <!-- <img src="../static\Images\image2.png" alt="Gallery image 4" class="gallery__img"> -->
         </figure>
         <figure class="gallery__item gallery__item--6_0">
