--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -74,6 +74,7 @@
               <div class="buttons_1">
               <input type="submit" value="Phase1 & Magnitude2" name="1"/>
               <input type="submit" value="Phase2 & Magnitude1" name="2" />
+              <input type="submit" value="Perform" name="3"/>
             </div>
             <div class="buttons_2">
 
