--- a/templates/Mixture.html
+++ b/templates/Mixture.html
@@ -74,12 +74,12 @@
               <div class="buttons_1">
               <input type="submit" value="Phase1 & Magnitude2" name="1"/>
               <input type="submit" value="Phase2 & Magnitude1" name="2" />
-              <input type="submit" value="Perform" name="3"/>
+              <!-- <input type="submit" value="Perform" name="3"/> -->
             </div>
             <div class="buttons_2">
 
               <input style="padding:11px 85px; font-size: 20px;" type="submit" value="Cut" name="3" />
-              <input style="padding:11px 70px; font-size: 20px; " type="submit" value="Select" name="3" />
+              <input style="padding:11px 70px; font-size: 20px; " type="submit" value="select" name="3" />
             </div>
 
 
@@ -135,7 +135,7 @@
           <div>Output Image</div>
         </figure>
           <figure class="gallery__item gallery__item--6">
-              <img src="../static\Images\output.png" alt="Gallery image 6" class="gallery__img">
+              <img id="out" src="../static/Images/output.png" alt="Gallery image 6" class="gallery__img">
           </figure>
       </div>
   </div>
